--- a/app/static/style.css
+++ b/app/static/style.css
@@ -39,3 +39,12 @@ div {
   font-size: 20px;
   color: black !important;
 }
+
+#loginn {
+  text-decoration: underline;
+  font-size: 30px;
+  text-align: center !important;
+}
+#form {
+  text-align: center !important;
+}
