--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,8 +14,8 @@
         {% if session %} <a id = "/profile" href="/profile" class="w3-button w3-bar-item"> profile</a> {% endif %}
       </nav>
       <h1>Welcome to SPREE!</h1>
-      <h2>SPREE is a web app which displays clothing items and allows you to
-        filter by brand and sort by least to most expensive!</h2>
+      <h2>SPREE is a web app which displays clothing items from various brands and allows you to
+        filter by price!</h2>
         <!-- {% if session %}
           <p> you are logged in </p>
           <button type="button" href="/logout" > logout</button>
