--- a/app/static/style.css
+++ b/app/static/style.css
@@ -13,25 +13,11 @@ h1 {
   font-size: 40px !important;
   margin-left: 20px;
 }
-#shirts {
-  text-decoration: none !important;
-  color: white !important;
-  font-family: 'Waiting for the Sunrise' !important;
-  font-size: 23px !important;
-  margin-left: 4px;
-}
-#storee {
-  text-decoration: none !important;
-  color: white !important;
-  font-family: 'Waiting for the Sunrise' !important;
-  font-size: 23px !important;
-  margin-left: 20px;
-}
 nav {
   display: block !important;
   background-color: #e91e63;
 }
-img {
+#pic {
   margin-left: 210px;
   image-resolution: from-image;
 }
@@ -39,13 +25,12 @@ div {
   font-size: 20px;
   color: black !important;
 }
+#storee {
+  margin-left: 20px;
+}
 
 #loginn {
   text-decoration: underline;
   font-size: 30px;
   text-align: center !important;
 }
-#form {
-  text-align: center !important;
-}
-#information
