--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -15,11 +15,16 @@
       </nav>
       <h2 id="loginn"> Administrator</h2>
       <form  method="post" action="/admin">
+        <div class="row">
+              <div class="col s4"></div>
+              <div class="col s4 white">
+                <label for="code"> SECRET 4-DIGIT CODE:</label>
+                <input type="text" name="code"/></div>
+              </div>
           <div class="row">
-            <div class="col s6" id="form">
-              <div class="col s6 white"> <input type="text" name="code"/> SECRET 4-DIGIT CODE:</div>
-            </div>
-            <input type="submit" value="enter" id="form"/>
+            <div class="col s4"></div>
+            <div class="col s4 center">
+            <input type="submit" value="enter"/> </div> </div>
       </form>
     </body>
 </html>
