--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -3,7 +3,7 @@
     {% for item in items %}
     <div class="row">
       <div id="info" class="col s6">
-      <img src={{ item.image }} width="400" height="400" ></div>
+      <img id="pic" src={{ item.image }} width="400" height="400" ></div>
       <div class="col s6 white"> {{ item.name }} <br>
       {{ item.description }} <br>
       $ {{ item.price }} <br>
