--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,25 +16,31 @@
       <h2 id="loginn"> Login</h2>
       <form  method="post" action="/login">
         <div class="row">
-          <div class="col s6" id="form">
-            <div class="col s6 white">
+          <div class="col s4"></div>
+          <div class="col s4 white">
             <label for="email"> EMAIL:</label>
             <input type="text" name="email"/></div>
-          </div>
+          </div> </div>
           <div class="row">
-            <div class="col s6" id="form">
-              <div class="col s6 white">
+            <div class="col s4"></div>
+            <div class="col s4 white">
               <label for="password"> PASSWORD:</label>
               <input type="password" name="password"/></div>
             </div>
           </div>
-            <input type="submit" value="enter" id="form"/>
+          <div class="row">
+            <div class="col s4"></div>
+            <div class="col s4 center">
+            <input type="submit" value="enter"> </div> </div>
       </form>
       {% if session %}
-        <p> you are logged in with {{session['username']}} </p>
-        <button type="button"><a href="/logout">logout</a></button>
+        <p><center> you are logged in with {{session['username']}} </center></p>
+        <center><button type="button"><a href="/logout">logout</a></button></center>
       {% endif %}
       <br>
-      <a  id="form" href="/signup"> Don't have an account? Sign up here!</a>
+      <div class="row">
+        <div class="col s4"></div>
+        <div class="col s4 center">
+      <a href="/signup"> Don't have an account? Sign up here!</a> </div> </div>
     </body>
 </html>
