--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -15,25 +15,33 @@
       </nav>
       <h2 id="loginn"> Sign Up</h2>
       {% if session %}
-        <p> you are logged in with {{session['username']}} </p>
-        <button type="button"><a href="/logout">logout</a></button>
+        <p><center> you are logged in with {{session['username']}} </center></p>
+        <center><button type="button"><a href="/logout">logout</a></button></center>
       {% endif %}
       <br>
       <form  method="POST" action="/signup">
+        <div class="row">
+          <div class="col s4"></div>
+          <div class="col s4 white">
+            <label for="email"> EMAIL:</label>
+            <input type="text" name="email"/></div>
+          </div> </div>
           <div class="row">
-            <div class="col s6" id="form">
-              <div class="col s6 white"> <input type="text" name="email"/> EMAIL:</div>
+            <div class="col s4"></div>
+            <div class="col s4 white">
+              <label for="password"> PASSWORD:</label>
+              <input type="password" name="password1"/></div>
             </div>
             <div class="row">
-              <div class="col s6" id="form">
-                <div class="col s6 white"> <input type="password" name="password1"/>PASSWORD:</div>
+              <div class="col s4"></div>
+              <div class="col s4 white">
+                <label for="password"> REPEAT PASSWORD:</label>
+                <input type="password" name="password2"/></div>
               </div>
             <div class="row">
-              <div class="col s6" id="form">
-                <div class="col s6 white"> <input type="password" name="password2"/>REPEAT PASSWORD:</div>
-              </div>
-            </div>
-              <input type="submit" value="create account" id="form"/>
+              <div class="col s4"></div>
+              <div class="col s4 center">
+              <input type="submit" value="create account"/> </div> </div>
         </form>
     </body>
 </html>
