--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -19,7 +19,7 @@
               <div class="col s4"></div>
               <div class="col s4 white">
                 <label for="code"> SECRET 4-DIGIT CODE:</label>
-                <input type="text" name="code"/></div>
+                <input type="password" name="code"/></div>
               </div>
           <div class="row">
             <div class="col s4"></div>
